argocd/apps/media/sonarr/manifests/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
  hostnames:
    - "sonarr.carsonanderson.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: radarr
          port: 8989
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
